code cleanup, better security on phone owner